--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <title>20 Essential Tips on Wildlife Photography for Beginners</title>
     <link rel="icon" type="img/png" href="asset/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
-        h1{font-family:'Montserrat','sans-serif';text-align:left;}
-        p{font-family:'Playfair Display';font-size:18px; line-height:26px;}
-        h2{font-family:'Montserrat','sans-serif';font-size:2rem ;line-height:1.2;}
+        h1{font-family:'rubik';text-align:left;font-weight:700; font: size 2rem;letter-spacing: 1.5px;}
+        p{font-family:'rubik';font-size:1rem; line-height:1.5; font-weight:400 ;}
+        h2{font-family:'rubik';font-size:2rem ;line-height:1.2; font-weight:500 ;}
     </style>
 </head>
 <body>
-    <div style="width:55%; margin:auto;">
+    <div style="width:54%; margin:auto;">
     <h1>20 Essential Tips on Wildlife Photography for Beginners</h1>
     </div>
-    <div style="width:80%; margin:auto;text-align: center;">
+    <div style="width:100%; margin:auto;text-align: center;">
     <img src="asset/img/Puffin.jpg"> 
     </div>
     <div style="width:50%; margin:auto;">
