--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
-        h1{font-family:'rubik';text-align:left;font-weight:700; font: size 2rem;letter-spacing: 1.5px;}
-        p{font-family:'rubik';font-size:1rem; line-height:1.5; font-weight:400 ;}
+        h1{font-family:'rubik';text-align:left;font-weight:700; font-size:2rem;letter-spacing: 1.5px;}
+        p{font-family:'rubik';font-size:1.5rem; line-height:1.5; font-weight:400 ;}
         h2{font-family:'rubik';font-size:2rem ;line-height:1.2; font-weight:500 ;}
     </style>
 </head>
@@ -35,18 +35,18 @@
     <h2>How to get into wildlife photography</h2>
     </div>
     <div style="width:50%; margin:auto;">
-    <p>Getting into wildlife photography for beginners may seem like an unobtainable goal.To<br> many, it is a dream that is often talked about but not pursued seriously.</p>
-    <p>Knowing where to start can be one of the biggest obstacles for wildlife photography <br> beginners, but there are opportunities everywhere.</p>
+    <p>Getting into wildlife photography for beginners may seem like an unobtainable goal.To many, it is a dream that is often talked about but not pursued seriously.</p>
+    <p>Knowing where to start can be one of the biggest obstacles for wildlife photography  beginners, but there are opportunities everywhere.</p>
     <img src="asset/img/puffin-2.jpg" width="100%">
-    <p>To earn the badge of a wildlife photographer, it’s not necessary to have a portfolio of<br> polar bears under your belt. Wildlife photography can start at home, capturing images<br> of the birds in the garden.</p>
+    <p>To earn the badge of a wildlife photographer, it’s not necessary to have a portfolio of polar bears under your belt. Wildlife photography can start at home, capturing images of the birds in the garden.</p>
     <img src="asset/img/Screenshot 2.png" width="100%">
-    <p>“But I don’t have a garden!” I hear you there, from your city apartment. Even if you are<br> living in the “concrete jungle,” there’s a whole field of nature photography around<br> urban wildlife.</p>
+    <p>“But I don’t have a garden!” I hear you there, from your city apartment. Even if you are living in the “concrete jungle,” there’s a whole field of nature photography around urban wildlife.</p>
     <h2><b>Tips on wildlife photography for beginners</b></h2>
-        <p>The following are some of the key things to know when you begin your venture into<br> wildlife photography. These are things I wish I knew when I started, so hopefully they<br> will help you too.</p>
+        <p>The following are some of the key things to know when you begin your venture into wildlife photography. These are things I wish I knew when I started, so hopefully they will help you too.</p>
         <h3><b>1.Learn how to deal with low light situations</b></h3>
-        <p>A lot of wild animals are mostly active at dawn and dusk. Naturally, these times in the<br>day have less light available and that means it can be challenging to keep your shutter<br>speed high enough to eliminate motion blur (or even camera shake) from your shots.</p>
-        <p>Not only that, but animals tend not to stand out in the open. You’ll probably find<br> yourself shooting into shade, or under the cover of trees, which means there’s even<br> less light available to you.</p>
-        <p>This is the biggest hurdle I had to learn how to overcome when I first started out as a<br> wildlife photographer. It can be incredibly frustrating to shoot a load of frames, having<br>waited hours, only to find that they’re ruined by motion blur because you have<br>a shutter speed of 1/20th second.</p>
+        <p>A lot of wild animals are mostly active at dawn and dusk. Naturally, these times in theday have less light available and that means it can be challenging to keep your shutterspeed high enough to eliminate motion blur (or even camera shake) from your shots.</p>
+        <p>Not only that, but animals tend not to stand out in the open. You’ll probably find yourself shooting into shade, or under the cover of trees, which means there’s even less light available to you.</p>
+        <p>This is the biggest hurdle I had to learn how to overcome when I first started out as a wildlife photographer. It can be incredibly frustrating to shoot a load of frames, havingwaited hours, only to find that they’re ruined by motion blur because you havea shutter speed of 1/20th second.</p>
         <img src="asset/img/deer.jpg" width="100%">
         <p>Your ISO speed is a setting you’ll become very familiar with as a wildlife photographer, and you’ll probably find yourself constantly adjusting it as the light gets lower and lower. A higher ISO value means that the sensor of your camera is more sensitive to light, but you’ll introduce more digital noise into your shot.
 
